--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'org.springframework.data:spring-data-jdbc'
+	testImplementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
